# crochet

./: .gitignore  App.jsx  Dockerfile  README.md  index.html  main.jsx  package-lock.json  package.json  pyproject.toml  styles.css
backend/: app.py  pyproject.toml
env/: app.py  pyvenv.cfg
frontend/: index.html  package.json
frontend/src/: App.css
frontend/src/components/: Button.jsx  Chart.jsx  Grid.jsx  Header.jsx  Round.jsx  Stitch.jsx
frontend/src/css/: Chart.css  Header.css
src/: App.css  App.jsx  colors.jsx  main.jsx  styles.css
src/components/: Chart.css  Chart.jsx  Grid.jsx  Header.css  Header.jsx  OptionsBar.jsx  Popup.jsx  Round.jsx  Stitch.jsx  Stitchbar.jsx  TextDisplay.jsx  Toolbar.css  Toolbar.jsx
src/components/chart/: Chart.css  Chart.jsx  Grid.jsx  Round.jsx
src/components/stitches/: Stitch.jsx  Stitchbar.jsx  Stitches.jsx
src/components/toolbar/: Toolbar.css  Toolbar.jsx
src/css/: Chart.css  Popup.css  Stitchbar.css  TextDisplay.css  Toolbar.css
