[tool.poetry]
name = "crochet"
version = "0.1.0"
description = ""
authors = ["jandersoj <jandersoj03@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
requests = "^2.32.3"
flask-cors = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
